[package]
name = "bevy_stuff"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.14.2", features = ["dynamic_linking"] }
avian3d = { version = "0.1.2", features = ["simd"] }
leafwing-input-manager = { git = "https://github.com/Leafwing-Studios/leafwing_input_manager" }

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
