[package]
name = "bevy_stuff"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.14.2" }
avian3d = { features = ["simd"], git = "https://github.com/Jondolf/avian" }
leafwing-input-manager = { git = "https://github.com/Leafwing-Studios/leafwing_input_manager" }
avian_interpolation3d = { git = "https://github.com/janhohenheim/avian_interpolation" }

[features]
physics_debug = []
dev = ["bevy/dynamic_linking"]

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[lints.clippy]
too_many_arguments = "allow"
type_complexity = "allow"

[profile.release]
strip = true
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
